--- a/webUi/index.html
+++ b/webUi/index.html
@@ -1,55 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Bootstrap 101 Template</title>
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/node-status.css" rel="stylesheet">
-    <style> body { padding: 15px; }</style>
-  </head>
-  <body>
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/node-status.css" rel="stylesheet">
+        <style> body { padding: 15px; }</style>
+    </head>
+    <body>
 
-    <div class="navbar navbar-inverse" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">ADS</a>
+        <div class="navbar navbar-inverse" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">ADS</a>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#fms">FMS</a></li>
+                        <li><a id="statusLink" href="#status">Status</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#fms">FMS</a></li>
-            <li><a href="#status">Status</a></li>
-          </ul>
+
+        <div class="container" id="mainContent">
+            <h1>Home</h1>
         </div>
-      </div>
-    </div>
 
-    <div class="container">
-        <h1>Home</h1>
-    </div>
+        <script src="js/jquery-2.1.0.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/d3.min.js"></script>
+        <script src="js/node-status.js"></script>
 
-    <script src="js/jquery-2.1.0.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/d3.min.js"></script>
-    <script src="js/node-status.js"></script>
-
-    <script>
-        $(function() {
-            d3.json("./api/status/store/chk", function(error, json) {
-                makeHist(json.histogram);
-                d3.json("./api/status/store/ssk", function(error, json) {
-                    makeHist(json.histogram);
-                });
-            });
-        });
-    </script>
-  </body>
+        <script>
+            var content = $('#mainContent');
+            
+            function switchTo(k) {
+                content.empty();
+                k(content);
+            }
+            
+            $('#statusLink').click(switchTo.bind(null, appendStatus));
+        </script>
+    </body>
 </html>
