--- a/webUi/index.html
+++ b/webUi/index.html
@@ -10,7 +10,6 @@
         <style> body { padding: 15px; }</style>
     </head>
     <body>
-
         <div class="navbar navbar-inverse" role="navigation">
             <div class="container">
                 <div class="navbar-header">
@@ -24,9 +23,10 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#fms">FMS</a></li>
-                        <li><a id="statusLink" href="#status">Status</a></li>
+                        <li><a href="#uploads">
+                                <span class="glyphicon glyphicon-upload"></span> Upload</a></li>
+                        <li><a id="statusLink" href="#status">
+                                <span class="glyphicon glyphicon-stats"></span> Status</a></li>
                     </ul>
                 </div>
             </div>
