--- a/webUi/index.html
+++ b/webUi/index.html
@@ -50,6 +50,8 @@
             }
             
             $('#statusLink').click(switchTo.bind(null, appendStatus));
+            
+            switchTo(appendStatus);
         </script>
     </body>
 </html>
